force-app/main/default/objects/OrgSnapshotAlert__c/OrgSnapshotAlert__c.object-meta.xml
<CustomObject>
    <description>This object is used to configure org limit thresholds to reach before sending an alert to users.</description>
    <label>Org Snapshot Alert</label>
    <nameField>
        <label>Org Snapshot Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Snapshot Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>