force-app/main/default/objects/OrgSnapshotAlert__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email used to sent the alert</description>
    <inlineHelpText>Warning: setting an email will count against Single Email limit.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>