force-app/main/default/objects/OrgSnapshotAlert__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>Used to send alert to a whole group of users.</description>
    <inlineHelpText>Public Group DeveloperName</inlineHelpText>
    <label>Public Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>