force-app/main/default/objects/OrgSnapshotAlert__c/fields/LastAlertSentDate__c.field-meta.xml
<CustomField>
    <fullName>LastAlertSentDate__c</fullName>
    <description>Used to store the last alert sent for this limit</description>
    <label>Last Alert Sent Date</label>
    <type>DateTime</type>
</CustomField>