force-app/main/default/objects/OrgSnapshotAlert__c/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <description>Define the org limit key used for the Alert</description>
    <label>Limit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AnalyticsExternalDataSizeMB</fullName>
            </value>
            <value>
                <fullName>CdpAiInferenceApiMonthlyLimit</fullName>
            </value>
            <value>
                <fullName>ConcurrentAsyncGetReportInstances</fullName>
            </value>
            <value>
                <fullName>ConcurrentEinsteinDataInsightsStoryCreation</fullName>
            </value>
            <value>
                <fullName>ConcurrentEinsteinDiscoveryStoryCreation</fullName>
            </value>
            <value>
                <fullName>ConcurrentSyncReportRuns</fullName>
            </value>
            <value>
                <fullName>DailyAnalyticsDataflowJobExecutions</fullName>
            </value>
            <value>
                <fullName>DailyAnalyticsUploadedFilesSizeMB</fullName>
            </value>
            <value>
                <fullName>DailyApiRequests</fullName>
            </value>
            <value>
                <fullName>DailyAsyncApexExecutions</fullName>
            </value>
            <value>
                <fullName>DailyAsyncApexTests</fullName>
            </value>
            <value>
                <fullName>DailyBulkApiBatches</fullName>
            </value>
            <value>
                <fullName>DailyBulkV2QueryFileStorageMB</fullName>
            </value>
            <value>
                <fullName>DailyBulkV2QueryJobs</fullName>
            </value>
            <value>
                <fullName>DailyDeliveredPlatformEvents</fullName>
            </value>
            <value>
                <fullName>DailyDurableGenericStreamingApiEvents</fullName>
            </value>
            <value>
                <fullName>DailyDurableStreamingApiEvents</fullName>
            </value>
            <value>
                <fullName>DailyEinsteinDataInsightsStoryCreation</fullName>
            </value>
            <value>
                <fullName>DailyEinsteinDiscoveryOptimizationJobRuns</fullName>
            </value>
            <value>
                <fullName>DailyEinsteinDiscoveryPredictAPICalls</fullName>
            </value>
            <value>
                <fullName>DailyEinsteinDiscoveryPredictionsByCDCDirect</fullName>
            </value>
            <value>
                <fullName>DailyEinsteinDiscoveryStoryCreation</fullName>
            </value>
            <value>
                <fullName>DailyFieldServiceAppointmentOptimization</fullName>
            </value>
            <value>
                <fullName>DailyFunctionsApiCallLimit</fullName>
            </value>
            <value>
                <fullName>DailyGenericStreamingApiEvents</fullName>
            </value>
            <value>
                <fullName>DailyStandardVolumePlatformEvents</fullName>
            </value>
            <value>
                <fullName>DailyStreamingApiEvents</fullName>
            </value>
            <value>
                <fullName>DailyWorkflowEmails</fullName>
            </value>
            <value>
                <fullName>DataStorageMB</fullName>
            </value>
            <value>
                <fullName>DurableStreamingApiConcurrentClients</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>