force-app/main/default/objects/OrgSnapshotAlert__c/fields/NotificationInterval__c.field-meta.xml
<CustomField>
    <fullName>NotificationInterval__c</fullName>
    <description>Interval between two notifications</description>
    <inlineHelpText>Interval is in Minutes</inlineHelpText>
    <label>Notification Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>