force-app/main/default/objects/OrgSnapshotAlert__c/fields/SendCustomNotification__c.field-meta.xml
<CustomField>
    <fullName>SendCustomNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send a custom notification to the defined user</description>
    <label>Send Custom Notification</label>
    <type>Checkbox</type>
</CustomField>