force-app/main/default/objects/OrgSnapshotAlert__c/fields/Threshold__c.field-meta.xml
<CustomField>
    <fullName>Threshold__c</fullName>
    <description>When the limit reach this percentage, an alert will be sent</description>
    <label>Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>