force-app/main/default/objects/OrgSnapshotAlert__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to send the alert (email or custom notification if enabled)</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OrgSnapshotAlerts</relationshipName>
    <type>Lookup</type>
</CustomField>