force-app/main/default/objects/OrgSnapshotAlert__c/validationRules/PreventUserAndGroupDefined.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventUserAndGroupDefined</fullName>
    <active>true</active>
    <description>Ensure that only one field among User__c and Group__c is filled in.</description>
    <errorConditionFormula>AND( NOT(ISBLANK( User__c )) , NOT(ISBLANK( Group__c )) )</errorConditionFormula>
    <errorMessage>You can only choose one User or one Group but not both</errorMessage>
</ValidationRule>