force-app/main/default/objects/OrgSnapshotAlert__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Threshold__c</columns>
    <columns>User__c</columns>
    <columns>Group__c</columns>
    <columns>Email__c</columns>
    <columns>NotificationInterval__c</columns>
    <columns>SendCustomNotification__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>